<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="10dp"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SignupFormUsernameTV" android:textColor="@color/descN"></TextView>
<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:background="@color/tvBg" android:textColor="#ffffff" android:layout_width="fill_parent" android:layout_marginTop="5dp" android:maxLines="1"></EditText>
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MyProfFormTV7" android:layout_marginTop="10dp" android:textColor="@color/descN"></TextView>
<EditText android:id="@+id/EditText02" android:layout_height="wrap_content" android:background="@color/tvBg" android:textColor="#ffffff" android:layout_width="fill_parent" android:layout_marginTop="5dp" android:inputType="textPassword" android:maxLines="1"></EditText>
<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp"><ImageButton android:id="@+id/ImageButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/signin" android:background="#00000000" android:layout_marginRight="10dp"></ImageButton>
<ImageButton android:id="@+id/ImageButton02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="#00000000" android:src="@drawable/cancel"></ImageButton>
</LinearLayout>
<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TV_TW_LOGIN" android:layout_marginTop="10dp"></TextView>
</LinearLayout>
