<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/RatedDetailsLinearLayout04"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" android:gravity="center" android:layout_height="fill_parent">
	<ImageView android:id="@+id/RatedDetailsImageView01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:background="@drawable/green_border_big" android:padding="3dp"
		android:layout_marginBottom="2dp"></ImageView>

	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/RatedDetailsTextView01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/RatedDetailsTV1" android:textColor="@color/descN" style="@style/simplefont"></TextView>
			<TextView android:id="@+id/RatedDetailsTextView02"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#ffffff" android:text=": Nature"
				style="@style/simplefont"></TextView>
		</TableRow>
		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/descN"
				android:text="@string/NewRateFormLabelPictureA" style="@style/simplefont"></TextView>
			<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#ffffff"
				android:text=": Nature" style="@style/simplefont"></TextView>
		</TableRow>
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NewRateFormLabelPictureB" android:textColor="@color/descN" style="@style/simplefont"></TextView>
			<TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#ffffff" android:text=": Nature" style="@style/simplefont"></TextView>
		</TableRow>
		<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView android:id="@+id/RatedDetailsTextView03"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="@color/descN" android:text="@string/RatedDetailsTV3" style="@style/simplefont"></TextView>
			<TextView android:id="@+id/RatedDetailsTextView04"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#ffffff" android:text=": 24 Feb 2011" style="@style/simplefont"></TextView>
		</TableRow>
	</TableLayout>
	<ImageView android:id="@+id/RatedDetailsImageView02"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:background="@drawable/red_border_big" android:padding="3dp"
		android:layout_marginTop="2dp"></ImageView>
	<com.riktamtech.android.ratethisstc.ui.components.RatingView
		android:id="@+id/RatedDetailsView01" 
		android:layout_height="wrap_content" 
		android:layout_width="240dp" 
		android:layout_marginTop="8dp"></com.riktamtech.android.ratethisstc.ui.components.RatingView>
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="952 Rates"
		android:textColor="#ffffff" android:layout_marginTop="2dp" style="@style/simplefont"></TextView>

</LinearLayout>

